# AetherAV

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  aether.toml
.github/: RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml  scorecard.yml
assets/models/: pe.json
assets/plugins/: demo-detector.toml  detector.sh
assets/rules/: aether_core.yar  aether_extra.yar  example.yar
assets/traces/: baseline-normal.json  ransomware-attack.json
crates/aether-anomaly/: Cargo.toml
crates/aether-anomaly/src/: lib.rs  model.rs  stats.rs
crates/aether-behavior/: Cargo.toml
crates/aether-behavior/src/: event.rs  graph.rs  lib.rs  rules.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs
crates/aether-common/: Cargo.toml
crates/aether-common/src/: lib.rs  logging.rs
crates/aether-config/: Cargo.toml
crates/aether-config/src/: lib.rs
crates/aether-core/: Cargo.toml
crates/aether-core/benches/: scan_bench.rs
crates/aether-core/src/: heuristics.rs  lib.rs
crates/aether-daemon/: Cargo.toml
crates/aether-daemon/src/: http.rs  lib.rs
crates/aether-firewall/: Cargo.toml
crates/aether-firewall/src/: lib.rs  web.rs
crates/aether-intel/: Cargo.toml
crates/aether-intel/src/: hmac.rs  lib.rs
crates/aether-llm/: Cargo.toml
crates/aether-llm/src/: lib.rs
crates/aether-ml/: Cargo.toml
crates/aether-ml/src/: features.rs  lib.rs  model.rs
crates/aether-parsers/: Cargo.toml
crates/aether-parsers/src/: elf.rs  entropy.rs  lib.rs  macho.rs  office.rs  pdf.rs  pe.rs  script.rs  section.rs
crates/aether-plugins/: Cargo.toml
crates/aether-plugins/src/: lib.rs
crates/aether-quarantine/: Cargo.toml
crates/aether-quarantine/src/: lib.rs
crates/aether-realtime/: Cargo.toml
crates/aether-realtime/src/: clipguard.rs  dns.rs  exectrace.rs  lib.rs  memscan.rs  netmon.rs  onaccess.rs  ransomguard.rs  secrets.rs  selfprotect.rs  sentinel.rs  stealerguard.rs  timestomp.rs
crates/aether-sandbox/: Cargo.toml
crates/aether-sandbox/src/: antievasion.rs  disasm.rs  emulator.rs  exploit.rs  lib.rs  shellcode.rs
crates/aether-signatures/: Cargo.toml
crates/aether-signatures/src/: bloom.rs  fuzzy.rs  hashdb.rs  lib.rs  ndb.rs  yara.rs
crates/aether-unpack/: Cargo.toml
crates/aether-unpack/src/: external.rs  lib.rs
deploy/: README.md  aether-update.service  aether-update.timer
desktop/: README.md  run.sh
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: app.js  index.html  styles.css  widget.html
docs/: BENCHMARK.md  CERTIFICATION.md  OPENSSF.md  RELEASE.md  ROADMAP.md  VERIFY.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: intel_feeds.rs  parse_docs.rs  parse_object.rs  parse_pe.rs  unpack.rs
installer/linux/: build-deb.sh  install.sh
installer/macos/: build-dmg.sh  build-pkg.sh  com.aetherav.realtime.plist  distribution.xml
installer/macos/resources/: LICENSE_EULA.txt  conclusion.html  welcome.html
installer/macos/scripts/: postinstall
installer/windows/: aetherav.nsi  build.ps1
installer/windows/driver/: README.md  aetherav.c  aetherav.inf
installer/windows/driver/rtsvc/: Cargo.toml
installer/windows/driver/rtsvc/src/: main.rs
packaging/: README.md
packaging/systemd/: aether-scan.service  aether-scan.timer  aether-watch.service
tools/: TRAINING.md  auto-refresh-feed.sh  benchmark.sh  build-tlsh.sh  cert-selftest.sh  convert_gguf.py  export_gguf.py  gen_av_dataset.py  import_all.sh  import_clamav.py  import_feeds.py  import_tlsh.py  import_yara.py  import_yara_forge.py  publish-feed.sh  publish-model.sh  reproducible-build.sh  retrain.sh  set-version.sh  sign-release.sh  train_av_llm.py  train_pe_model.py  train_simple.py  update-intel.sh
tools/vt-integration/: README.md  aetherav-vt-scanner.sh
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css  main.jsx
