[package]
name = "aether-anomaly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Per-host behavioral baseline + online anomaly detection for AetherAV."

[dependencies]
aether-common = { workspace = true }
aether-behavior = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
