[package]
name = "aether-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layered configuration (defaults + TOML + env) for AetherAV."

[dependencies]
aether-common = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
