[package]
name = "aether-intel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Threat-intel feeds, signed delta updates and hot-reload for AetherAV."

[dependencies]
aether-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
