[package]
name = "aether-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "On-device compact-LLM classifier embedded as an AetherAV detection engine."

[dependencies]
aether-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Persistent-server mode: POST prompts to an already-loaded llama.cpp server.
ureq = { workspace = true, features = ["json"] }
