[package]
name = "aether-parsers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Universal file-format parsers (PE first) for AetherAV."

[dependencies]
aether-common = { workspace = true }
goblin = { workspace = true }
md-5.workspace = true
tracing = { workspace = true }
