[package]
name = "aether-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Third-party detector plugin system for AetherAV (subprocess protocol)."

[dependencies]
aether-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
