[package]
name = "aether-quarantine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Encrypted quarantine vault, remediation and forensics for AetherAV."

[dependencies]
aether-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
